# gchq-data-quality

./: .gitignore  .pre-commit-config.yaml  404.html  CHANGELOG.md  CONTRIBUTING.md  README.md  index.html  mkdocs.yml  objects.inv  pyproject.toml
.github/workflows/: coverage.yml  docs.yml  release.yml  test_pandas3.yml  tests.yml
api/: index.html
docs/: api.md  index.md  insights.md  installation.md  python-advanced.md  python-basic.md  python-pyspark.md  what-is-data-quality.md
insights/: index.html
installation/: index.html
python-advanced/: index.html
python-basic/: index.html
python-pyspark/: index.html
scripts/: add-copyright.sh  check-copyright.sh
search/: search_index.json
src/gchq_data_quality/: __init__.py  config.py  errors.py  globals.py  models.py
tests/: .coverage  README.md  conftest.py  test_globals.py  test_models.py
tests/artifacts/: data_quality_rules.yaml  test_config.yaml  test_patterns.yaml
tests/config/: test_config_models.py  test_load_from_yaml.py
tests/data/: accuracy.yaml  aggregate_records_failed_samples.yaml  array_paths_are_valid.yaml  completeness.yaml  consistency.yaml  consistency_expressions.yaml  create_skip_if_null_mask.yaml  create_spark_dataframe.yaml  extract_and_sort_array_paths.yaml  extract_backticked_fields.yaml  extract_columns_from_expression.yaml  final_paths_from_exploded_df.yaml  flatten_spark.yaml  format_records_failed_sample.yaml  get_parent_column.yaml  get_records_failed_ids.yaml  is_within_datetime_range.yaml  pick_first_non_null_in_array.yaml  records_failed_ids_are_int.yaml  rename_array_paths.yaml  replace_na_values.yaml  shift_records_failed_ids.yaml  spark_safe_column_name.yaml  spark_safe_expression.yaml  timeliness_relative.yaml  timeliness_static.yaml  to_utc_datetime.yaml  to_utc_datetime_series.yaml  uniqueness.yaml  validity_numerical_range.yaml  validity_regex.yaml
tests/elasticsearch/: test_elasticsearch.py
tests/results/: test_results.py
tests/rules/: test_accuracy.py  test_base.py  test_completeness.py  test_consistency.py  test_timeliness.py  (+2 more)
tutorials/: Data Quality Tutorial 01 - Python 1.ipynb  Data Quality Tutorial 02 - Python 2.ipynb  Data Quality Tutorial 03 - Pyspark.ipynb  README.md
what-is-data-quality/: index.html
(+41 files in other folders)
